--- a/ru/pets.yml
+++ b/ru/pets.yml
@@ -1,14 +1,14 @@
-title_menu_pet: "Петы"
+title_menu_pet: "Питомцы"
 slot_not_buy: "Слот закрыт"
 button_upgrade_pets: "Улучшение"
-empty_slot_on_pet: "Пустой слот петомца"
-title_rarity: "Редкость петомцев"
+empty_slot_on_pet: "Доступный слот"
+title_rarity: "Редкость питомцев"
 text_rarity: "Редкость\nЧем выше редкость, тем больше\nбудет множитель"
 button_confirm_upgrade: "Подтвердить улучшение"
-no_selected_upgrade_pet: "Петомец не выбран"
+no_selected_upgrade_pet: "Питомец не выбран"
 back_page: "Предыдущая страница"
 page_lore: "Нажмите, чтобы перейти"
 next_page: "Следующая страница"
 page: "Страница"
-button_delete_pet: "Удаление петомцев"
-button_delete_simple_pets: "Удалить обычных петомцев"
+button_delete_pet: "Удаление питомцев"
+button_delete_simple_pets: "Удалить обычных питомцев"
