--- a/en/pets.yml
+++ b/en/pets.yml
@@ -5,6 +5,7 @@ empty_slot_on_pet: "Empty slot pet"
 title_rarity: "Rarity pets"
 text_rarity: "Rarities\nThe higher the rarity, the greater\nthe multiplier boost will be"
 button_confirm_upgrade: "Confirm upgrade"
+button_rarity_delete_pet: "Delete specific rarity"
 no_selected_upgrade_pet: "No pet selected"
 back_page: "Previos page"
 page_lore: "Click to turn"
