--- a/ru/pets.yml
+++ b/ru/pets.yml
@@ -2,6 +2,7 @@ title_menu_pet: "Питомцы"
 slot_not_buy: "Слот закрыт"
 button_upgrade_pets: "Улучшение"
 empty_slot_on_pet: "Доступный слот"
+button_rarity_delete_pet: "Удалить определённую редкость"
 title_rarity: "Редкость питомцев"
 text_rarity: "Редкость\nЧем выше редкость, тем больше\nбудет множитель"
 button_confirm_upgrade: "Подтвердить улучшение"
