Added rarity and type pets

--- a/en/pets.yml
+++ b/en/pets.yml
@@ -13,3 +13,9 @@ next_page: "Next page"
 page: "Page"
 button_delete_pet: "Delete pets"
 button_delete_simple_pets: "Delete common pets"
+basic: "Basic"
+rare: "Rare"
+epic: "Epic"
+legendary: "Legendary"
+token: "Token"
+gems: "Gems"
