--- a/ru/pets.yml
+++ b/ru/pets.yml
@@ -13,3 +13,9 @@ next_page: "Следующая страница"
 page: "Страница"
 button_delete_pet: "Удаление питомцев"
 button_delete_simple_pets: "Удалить обычных питомцев"
+basic: "Обычный"
+rare: "Редкий"
+epic: "Эпический"
+legendary: "Легендарный"
+token: "Токен"
+gems: "Гемы"
