--- a/ru/pets.yml
+++ b/ru/pets.yml
@@ -4,7 +4,10 @@ button_upgrade_pets: "Улучшение"
 empty_slot_on_pet: "Доступный слот"
 button_rarity_delete_pet: "Удалить определённую редкость"
 title_rarity: "Редкость питомцев"
-text_rarity: "Редкость\nЧем выше редкость, тем больше\nбудет множитель"
+text_rarity: |-
+    Редкость
+    Чем выше редкость, тем больше
+    будет
 button_confirm_upgrade: "Подтвердить улучшение"
 no_selected_upgrade_pet: "Питомец не выбран"
 back_page: "Предыдущая страница"
@@ -17,7 +20,8 @@ basic: "Обычный"
 rare: "Редкий"
 epic: "Эпический"
 legendary: "Легендарный"
-token: |-
-  Токен
-  Редкость: %rarity
+token: "Токен"
 gems: "Гемы"
+lore: |-
+  %type
+  %rarity
