--- a/ru/pets.yml
+++ b/ru/pets.yml
@@ -23,8 +23,7 @@ button_delete_rare_pets: "Удалить редких петов"
 button_delete_epic_pets: "Удалить эпических петов"
 button_delete_legendary_pets: "Удалить легендарных петов"
 text_give_pets:  |- 
-  Вы получили
-  %pet
+  Вы получили %pet
 basic: "Обычный"
 rare: "Редкий"
 epic: "Эпический"
